--- a/TODO
+++ b/TODO
@@ -7,19 +7,19 @@ Problems solved initially:
 
   + angular-firebase is a newer version, so we have to include angularFire.js. @done (13-04-15 12:45)
 
-  - need to add ++resource++angular.js to RR profile. @cancelled (13-04-15 11:54)
+  + need to add ++resource++angular.js to RR profile. @cancelled (13-04-15 11:54) @done (13-04-22 16:19)
 
   + the production of ++resource++angular.js needs a Gruntfile.js. @done (13-04-15 12:40)
 
-  - cancel-submit button.
+  + cancel-submit button. @done (13-04-22 16:17)
 
+  + The gruntfile should rather be in the src package, but then an error occurs. @done (13-04-22 16:17) - I made the buildout and the egg to be a combined package.
 
 
 Future:
 
   - angular-firebase is a newer version, so we have to include angularFire.js. Find the bower package so we don't need this!
 
-  - Find also a firebase.js that currently comes from CDN
+  - Find also a firebase.js instead of the one that currently comes from CDN.
 
-  - The gruntfile should rather be in the src package, but then error.
 
