Change package name from plone_interact to collective_firebase. Scripts change interact_put => firebase_put, interact_get => firebase_get. Env vars change to PLONE_COLLECTIVE_FIREBASE_URL and PLONE_COLLECTIVE_FIREBASE_SECRET.

--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 
-plone_interact general issues:
+collective_firebase general issues:
 
   + check for correct handling of the secret / auth token in the python script. @done (13-04-29 14:20)
 
